[package]
name = "rust-keylogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.2.0", default-features = false }
chrono = "0.4.26"
clipboard-master = "3.1.3"
color-eyre = "0.6.2"
lazy_static = "1.4.0"
mki = "0.2.3"
regex = "1.9.1"
scopeguard = "1.1.0"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
